--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -163,7 +163,7 @@
     <string name="widget_white">Timber light widget</string>
 
 
-    <string name="add_to_playlist">Add to playlist</string>
+    <string name="add_to_playlist">Give your playlist a name</string>
     <string name="go_to_album">Go to album</string>
     <string name="go_to_artist">Go to artist</string>
     <string name="add_to_queue">Add to queue</string>
