--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="play_all_songs">Play all</string>
     <string name="play_random">Shuffle play</string>
     <string name="add_to_playlist">Add to playlist</string>
+    <string name="accessibility_overflow">Accessibility Overflow</string>
 </resources>
