--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="accessibility_overflow">Accessibility Overflow</string>
     <string name="playlist_fragment">Name</string>
     <string name="add_playList_background">Add playlist cover</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
