--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,9 +15,9 @@
     <string name="songs">PLaylist Name</string>
     <string name="play_all_songs">Play all</string>
     <string name="play_random">Shuffle play</string>
-    <string name="add_to_playlist">Add to playlist</string>
+    <string name="add_to_playlist">Craft your vibe : Create your playlist!</string>
     <string name="accessibility_overflow">Accessibility Overflow</string>
-    <string name="add_playList_background">Add playlist cover</string>
+    <string name="add_playList_background">Upload a cover</string>
     <string name="addPlayListButton">Add Playlist</string>
     <string name="playlist_fragment">Name</string>
 </resources>
